Central Memory First, Experience Later Summary Phase 1 只实现正式 memory，不实现 experience 写入逻辑。 删除并停止使用 ROOT_DIR/memory 和 agentDir/memory*；唯一正式根目录改为 MEMORY_DIR，与 CHATS_DIR 同级。 MEMORY_DIR 下同时保留两类资产： memory.db：总 memory 检索库，SQLite + FTS5 + embedding 存储 journal/：按日期分片的流水账记忆，JSONL 追加写 Phase 2 再引入 experience.db 和 experience/subjects/<subjectKey>/...，但本次先只预留命名，不创建、不接通 /api/learn。